--- a/packages/shop-web-angular/src/app/+products/products.component.html
+++ b/packages/shop-web-angular/src/app/+products/products.component.html
@@ -7,7 +7,7 @@
 				(ngModelChange)="changedProducts($event)"
 				type="text"
 				matInput
-				placeholder="e.g Pepperoni Pizza Sushi..."
+				placeholder="{{ 'PRODUCTS_VIEW.SEARCH_PRODUCTS' | translate }}"
 			/>
 			<mat-icon matSuffix>search</mat-icon>
 		</mat-form-field>
