fix: #1147 carrier deliveries page image fix

--- a/packages/carrier-mobile-ionic/src/components/order-card/order/product/product.component.html
+++ b/packages/carrier-mobile-ionic/src/components/order-card/order/product/product.component.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="test">
 			<section class="product-image">
-				<img [src]="image.url" [ngClass]="imageClass" />
+				<img *ngIf="image" [src]="image.url" [ngClass]="imageClass" />
 			</section>
 
 			<section class="product-content">
