--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
@@ -14,7 +14,10 @@
 					[hidden]="isEditing"
 					class="form-group row mb-4 centered"
 				>
-					<span>Select shape to add a new zone</span>
+					<span>{{
+						'WAREHOUSE_VIEW.MUTATION.SELECT_SHAPE_TO_ADD_ZONE'
+							| translate
+					}}</span>
 					<div class="col-sm-12 btn-container">
 						<button
 							(click)="
@@ -22,7 +25,7 @@
 							"
 							nbButton
 						>
-							Circle
+							{{ 'WAREHOUSE_VIEW.MUTATION.CIRCLE' | translate }}
 						</button>
 						<button
 							(click)="
@@ -30,7 +33,7 @@
 							"
 							nbButton
 						>
-							Shape
+							{{ 'WAREHOUSE_VIEW.MUTATION.SHAPE' | translate }}
 						</button>
 					</div>
 				</div>
@@ -39,21 +42,28 @@
 					class="mb-4"
 					*ngIf="!shapeReady && selectedShapeType"
 					[hidden]="isEditing"
-					>Draw a shape on the map</span
+					>{{
+						'WAREHOUSE_VIEW.MUTATION.DRAW_SHAPE_ON_MAP' | translate
+					}}</span
 				>
 
 				<fieldset *ngIf="shapeReady || isEditing">
 					<div class="form-group row">
 						<label
 							class="col-sm-4 d-flex align-items-center control-label"
-							>Name</label
+							>{{
+								'WAREHOUSE_VIEW.MUTATION.NAME' | translate
+							}}</label
 						>
 
 						<div class="col-sm-8">
 							<input
 								type="text"
 								class="form-control"
-								placeholder="Zone name"
+								[placeholder]="
+									'WAREHOUSE_VIEW.MUTATION.ZONE_NAME'
+										| translate
+								"
 								formControlName="name"
 							/>
 						</div>
@@ -62,7 +72,10 @@
 					<div class="form-group row">
 						<label
 							class="col-sm-4 d-flex align-items-center control-label"
-							>Minimum amount</label
+							>{{
+								'WAREHOUSE_VIEW.MUTATION.MINIMUM_AMOUNT'
+									| translate
+							}}</label
 						>
 
 						<div class="col-sm-8">
@@ -70,7 +83,10 @@
 								type="number"
 								step="0.1"
 								class="form-control"
-								placeholder="Minimum amount"
+								[placeholder]="
+									'WAREHOUSE_VIEW.MUTATION.MINIMUM_AMOUNT'
+										| translate
+								"
 								formControlName="amount"
 							/>
 						</div>
@@ -79,7 +95,10 @@
 					<div class="form-group row">
 						<label
 							class="col-sm-4 d-flex align-items-center control-label"
-							>Delivery fee</label
+							>{{
+								'WAREHOUSE_VIEW.MUTATION.DELIVERY_FEE'
+									| translate
+							}}</label
 						>
 
 						<div class="col-sm-8">
@@ -87,7 +106,10 @@
 								type="number"
 								step="0.1"
 								class="form-control"
-								placeholder="Delvery fee"
+								[placeholder]="
+									'WAREHOUSE_VIEW.MUTATION.DELIVERY_FEE'
+										| translate
+								"
 								formControlName="fee"
 							/>
 						</div>
@@ -100,7 +122,9 @@
 								nbButton
 								class="btn btn-wa rning"
 							>
-								Cancel
+								{{
+									'WAREHOUSE_VIEW.MUTATION.CANCEL' | translate
+								}}
 							</button>
 
 							<button
@@ -112,7 +136,7 @@
 								class="btn btn-primary"
 								(click)="addZone()"
 							>
-								Add
+								{{ 'WAREHOUSE_VIEW.MUTATION.ADD' | translate }}
 							</button>
 						</div>
 
@@ -125,7 +149,9 @@
 								nbButton
 								class="btn btn-warning"
 							>
-								Cancel
+								{{
+									'WAREHOUSE_VIEW.MUTATION.CANCEL' | translate
+								}}
 							</button>
 							<button
 								[disabled]="deliverForm.status === 'INVALID'"
@@ -133,7 +159,7 @@
 								class="btn btn-primary"
 								(click)="editZone()"
 							>
-								Edit
+								{{ 'WAREHOUSE_VIEW.MUTATION.EDIT' | translate }}
 							</button>
 						</div>
 					</div>
