feat: show order type on merchant

--- a/packages/merchant-tablet-ionic/src/components/order-with-carrier/order-with-carrier.html
+++ b/packages/merchant-tablet-ionic/src/components/order-with-carrier/order-with-carrier.html
@@ -8,6 +8,7 @@
 			<div class="order-main">
 				<div class="delivery-details">
 					<customer-info [user]="order?.user"></customer-info>
+					<order-info [order]="order"></order-info>
 					<carrier-info
 						*ngIf="order.carrier"
 						[order]="order"
