fix: carrier menu icons not showing

--- a/packages/carrier-mobile-ionic/src/components/menu/menu.component.html
+++ b/packages/carrier-mobile-ionic/src/components/menu/menu.component.html
@@ -72,7 +72,7 @@
 						routerDirection="root"
 						routerLinkActive="activated"
 					>
-						<ion-icon name="paper"></ion-icon>
+						<ion-icon name="newspaper-outline"></ion-icon>
 						<ion-label>
 							{{ 'MENU.TERMS_OF_USE' | translate }}
 						</ion-label>
