--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
@@ -101,6 +101,22 @@
 				<div class="checkbox">
 					<nb-checkbox
 						status="success"
+						formControlName="ordersShortProcess"
+					>
+						{{
+							'WAREHOUSE_VIEW.MUTATION.ORDERS_SHORT_PROCESS'
+								| translate
+						}}
+					</nb-checkbox>
+				</div>
+			</div>
+		</div>
+
+		<div class="form-group row">
+			<div class="col-sm-9 offset-sm-2">
+				<div class="checkbox">
+					<nb-checkbox
+						status="success"
 						formControlName="isManufacturing"
 						>{{
 							'WAREHOUSE_VIEW.MUTATION.PRODUCTS_MANUFACTURING'
