feat: added flag for cash payment (#1136)
* feat: added flag for cash payment

* fix: added cash payment to be true by default

* feat: added cash payment option in settings create merchant

* fix: removed console logs

* fix: console logs

--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/payments-settings/payments-settings-form.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/payments-settings/payments-settings-form.component.html
@@ -1,9 +1,17 @@
 <div class="col-sm-12">
 	<div class="row m-0">
-		<div class="form-group offset-md-2 col-md-8">
+		<div class="form-group offset-md-2 col-md-4">
 			<nb-checkbox [(ngModel)]="isPaymentEnabled">
 				{{
 					'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.ALLOW_ONLINE_PAYMENT'
+						| translate
+				}}
+			</nb-checkbox>
+		</div>
+		<div class="form-group offset-md-2 col-md-4">
+			<nb-checkbox [(ngModel)]="isCashPaymentEnabled">
+				{{
+					'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.ALLOW_CASH_PAYMENT'
 						| translate
 				}}
 			</nb-checkbox>
