feat: #60 promotion forms

--- a/packages/merchant-tablet-ionic/src/components/menu/menu.component.html
+++ b/packages/merchant-tablet-ionic/src/components/menu/menu.component.html
@@ -68,7 +68,7 @@
 					>
 						<ion-icon ios="ios-paper" md="md-paper"></ion-icon>
 						<ion-label>{{
-							'CARRIERS_VIEW.PROMOTIONS' | translate
+							'CARRIERS_VIEW.PROMOTIONS.PROMOTIONS' | translate
 						}}</ion-label>
 					</ion-item>
 
