fix: shopmobile menu icons error

--- a/packages/shop-mobile-ionic/src/app/components/menu/menu.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/menu/menu.component.html
@@ -43,7 +43,7 @@
 
 				<ion-menu-toggle [autoHide]="true">
 					<ion-item>
-						<ion-icon name="hand"></ion-icon>
+						<ion-icon name="hand-left"></ion-icon>
 						<ion-label>{{
 							'SIDE_MENU.GROUPS.STORE.ITEMS.CALL_WAITER'
 								| translate
@@ -136,7 +136,7 @@
 						routerDirection="root"
 						routerLinkActive="activated"
 					>
-						<ion-icon name="lock"></ion-icon>
+						<ion-icon name="lock-closed"></ion-icon>
 						<ion-label>{{
 							'SIDE_MENU.GROUPS.LEGALS.ITEMS.PRIVACY' | translate
 						}}</ion-label>
@@ -146,7 +146,7 @@
 						routerDirection="root"
 						routerLinkActive="activated"
 					>
-						<ion-icon name="list-box"></ion-icon>
+						<ion-icon name="list"></ion-icon>
 						<ion-label>{{
 							'SIDE_MENU.GROUPS.LEGALS.ITEMS.TERMS_OF_USE'
 								| translate
