fix: #1180 carrier image field

--- a/packages/merchant-tablet-ionic/src/components/file-uploader/file-uploader.component.html
+++ b/packages/merchant-tablet-ionic/src/components/file-uploader/file-uploader.component.html
@@ -13,7 +13,7 @@
 		<ion-item mode="{{ itemMode }}" class="upload-input col-10 pr-0 pl-0">
 			<ion-input
 				#shownInput="ngModel"
-				class="{{ inputCustomStyle ? 'ion-input-custom-style' : '' }}"
+				[ngClass]="{ 'ion-input-custom-style': inputCustomStyle }"
 				ng2FileDrop
 				[uploader]="uploader"
 				(change)="imageUrlChanged()"
