--- a/packages/admin-web-angular/src/app/@shared/render-component/carriers-table/carrier-actions/carrier-actions.component.html
+++ b/packages/admin-web-angular/src/app/@shared/render-component/carriers-table/carrier-actions/carrier-actions.component.html
@@ -1,5 +1,5 @@
 <div class="iconsCont" style="display: flex;">
-	<h6 class="text-center iconBtns">
+	<h6 class="text-center iconBtns mr-1">
 		<i (click)="openInfo()" class="fa fa-info-circle infoBtn"></i>
 	</h6>
 	<h6><i (click)="openMap()" class="fa fa-search infoBtn"></i></h6>
