feat: complete FAKE_DATA_GENERATOR setting #1097

--- a/packages/admin-web-angular/src/app/pages/+setup/setup.component.html
+++ b/packages/admin-web-angular/src/app/pages/+setup/setup.component.html
@@ -5,7 +5,7 @@
 
 	<nb-card-body>
 		<button
-			*ngIf="fakeDataGenerator"
+			[disabled]="!fakeDataGenerator"
 			nbButton
 			status="primary"
 			class="mr-3"
