feat: #60 create promotion

--- a/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-forms/basic-info/basic-info-form.component.html
+++ b/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-forms/basic-info/basic-info-form.component.html
@@ -32,6 +32,28 @@
 			</ion-col>
 		</ion-row>
 		<ion-row>
+			<ion-col>
+				<ion-item>
+					<ion-label>Select Product</ion-label>
+					<ion-select
+						placeholder="Select One"
+						formControlName="product"
+					>
+						<ion-select-option
+							[value]="product.id"
+							*ngFor="let product of displayProducts"
+							><ion-img
+								*ngIf="product.image"
+								[src]="product.image"
+								alt="Product image"
+							></ion-img>
+							{{ product.title }}</ion-select-option
+						>
+					</ion-select>
+				</ion-item>
+			</ion-col>
+		</ion-row>
+		<ion-row>
 			<ion-col text-center>
 				<ion-item>
 					<ion-label class="labels" position="floating">{{
@@ -43,6 +65,16 @@
 						"
 						formControlName="title"
 					></ion-input>
+				</ion-item>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col text-center>
+				<ion-item>
+					<ion-label position="floating">{{
+						'CARRIERS_VIEW.PROMOTIONS.DESCRIPTION' | translate
+					}}</ion-label>
+					<ion-textarea formControlName="description"> </ion-textarea>
 				</ion-item>
 			</ion-col>
 		</ion-row>
@@ -71,37 +103,6 @@
 						"
 						formControlName="activeTo"
 					></ion-datetime>
-				</ion-item>
-			</ion-col>
-		</ion-row>
-
-		<ion-row>
-			<ion-col>
-				<ion-item>
-					<ion-label class="labels" position="floating">{{
-						'CARRIERS_VIEW.PROMOTIONS.PURCHASES_COUNT' | translate
-					}}</ion-label>
-					<ion-input
-						type="number"
-						formControlName="purchasesCount"
-						[placeholder]="
-							'CARRIERS_VIEW.PROMOTIONS.PURCHASES_COUNT'
-								| translate
-						"
-					></ion-input>
-				</ion-item>
-			</ion-col>
-		</ion-row>
-		<ion-row>
-			<ion-col text-center>
-				<ion-item>
-					<ion-label class="labels" position="floating">{{
-						'CARRIERS_VIEW.PROMOTIONS.IS_ACTIVE' | translate
-					}}</ion-label>
-					<ion-checkbox
-						formControlName="active"
-						color="primary"
-					></ion-checkbox>
 				</ion-item>
 			</ion-col>
 		</ion-row>
