feat: optionally disable customer's order cancelation

--- a/packages/shop-web-angular/src/app/+orders/order/order.component.html
+++ b/packages/shop-web-angular/src/app/+orders/order/order.component.html
@@ -63,6 +63,7 @@
 			mat-raised-button
 			color="accent"
 			class="cancel-button"
+			[disabled]="_isButtonDisabled"
 		>
 			<svg viewBox="0 0 24 24">
 				<path
