--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
@@ -143,6 +143,37 @@
 		</div>
 
 		<div class="form-group row">
+			<div class="col-sm-4 offset-sm-2">
+				<div class="checkbox">
+					<nb-checkbox
+						status="success"
+						formControlName="enabledOrderCancelation"
+						>{{
+							'WAREHOUSE_VIEW.MUTATION.UNALLOWED_ORDER_CANCELATION'
+								| translate
+						}}</nb-checkbox
+					>
+				</div>
+			</div>
+			<div class="col-sm-4" *ngIf="enabledOrderCancelation.value">
+				<select
+					class="form-control"
+					formControlName="stateOrderCancelation"
+				>
+					<option
+						*ngFor="let option of orderCancelationOptions"
+						value="{{ option.value }}"
+					>
+						{{
+							'WAREHOUSE_VIEW.MUTATION.ORDER_CANCELATION_OPTIONS.' +
+								option.text | translate
+						}}
+					</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="form-group row">
 			<label class="col-sm-2 control-label">{{
 				'WAREHOUSE_VIEW.MUTATION.CARRIERS' | translate
 			}}</label>
