--- a/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-forms/details-info/details-info-form.component.html
+++ b/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-forms/details-info/details-info-form.component.html
@@ -14,6 +14,20 @@
 				></ion-input>
 			</ion-item>
 		</ion-col>
+		<ion-col>
+			<ion-item>
+				<ion-label class="labels" position="floating">{{
+					'CARRIERS_VIEW.PROMOTIONS.PROMO_PRICE' | translate
+				}}</ion-label>
+				<ion-input
+					type="number"
+					formControlName="promoPrice"
+					[placeholder]="
+						'CARRIERS_VIEW.PROMOTIONS.PROMO_PRICE' | translate
+					"
+				></ion-input>
+			</ion-item>
+		</ion-col>
 	</ion-row>
 	<ion-row>
 		<ion-col text-center>
