--- a/packages/merchant-tablet-ionic/src/components/menu/menu.component.html
+++ b/packages/merchant-tablet-ionic/src/components/menu/menu.component.html
@@ -66,7 +66,7 @@
 						routerDirection="root"
 						routerLinkActive="activated"
 					>
-						<ion-icon ios="ios-paper" md="md-paper"></ion-icon>
+						<ion-icon ios="ios-alarm" md="md-alarm"></ion-icon>
 						<ion-label>{{
 							'CARRIERS_VIEW.PROMOTIONS.PROMOTIONS' | translate
 						}}</ion-label>
