fix: misspelled word

--- a/packages/admin-web-angular/src/app/pages/+orders/+order/order-products/order-products.component.html
+++ b/packages/admin-web-angular/src/app/pages/+orders/+order/order-products/order-products.component.html
@@ -66,7 +66,7 @@
 
 			<h4 class="text-danger" *ngIf="order?.isCancelled">
 				{{
-					'ORDER_VIEW.ORDER_PRODUCT_INFO.THE_ORDER_IS_CANCEL'
+					'ORDER_VIEW.ORDER_PRODUCT_INFO.THE_ORDER_IS_CANCELED'
 						| translate
 				}}
 			</h4>
