--- a/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-forms/details-info/details-info-form.component.html
+++ b/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-forms/details-info/details-info-form.component.html
@@ -17,14 +17,12 @@
 		<ion-col>
 			<ion-item>
 				<ion-label class="labels" position="floating">{{
-					'CARRIERS_VIEW.PROMOTIONS.PROMO_PRICE' | translate
+					'PROMOTIONS.PROMO_PRICE' | translate
 				}}</ion-label>
 				<ion-input
 					type="number"
 					formControlName="promoPrice"
-					[placeholder]="
-						'CARRIERS_VIEW.PROMOTIONS.PROMO_PRICE' | translate
-					"
+					[placeholder]="'PROMOTIONS.PROMO_PRICE' | translate"
 				></ion-input>
 			</ion-item>
 		</ion-col>
