Feat/#30 show orders by status (#1210)
* feat: show orders by status

* feat: show orders by status

* feat: show orders by status

* feat: filter order status dropdown options

* feat: filter order status dropdown options

* feat: styled switch orders dropdown

* fix: removed not needed option selected attribute

--- a/packages/merchant-tablet-ionic/src/pages/+warehouse/warehouse.scss
+++ b/packages/merchant-tablet-ionic/src/pages/+warehouse/warehouse.scss
@@ -62,6 +62,18 @@
 			overflow: unset !important;
 			padding: 0 !important;
 		}
+		ion-select {
+			overflow: unset !important;
+			padding: 0 !important;
+		}
+		ion-select::part(placeholder),
+		ion-select::part(text) {
+			opacity: 1;
+			font-size: 13px;
+		}
+		ion-select::part(icon) {
+			opacity: 1;
+		}
 	}
 
 	.order-header {
@@ -69,7 +81,7 @@
 	}
 
 	.button-bar-right-container {
-		width: 330px !important;
+		width: 530px !important;
 	}
 }
 
