--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
@@ -175,7 +175,7 @@
 		<div class="form-group row">
 			<div class="col-sm-9 offset-sm-2">
 				<div class="checkbox">
-					<nb-checkbox status="success" formControlName="isStoreMode">
+					<nb-checkbox status="success" formControlName="inStoreMode">
 						{{
 							'WAREHOUSE_VIEW.MUTATION.IN_STORE_MODE' | translate
 						}}
