--- a/packages/shop-mobile-ionic/src/app/components/order/order.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/order/order.component.html
@@ -43,7 +43,7 @@
 
 <div class="hr"></div>
 
-<div class="order-body">
+<div (click)="goToOrder()" class="order-body">
 	<div class="product-container" *ngFor="let product of order.products">
 		<e-cu-order-product
 			[orderProduct]="product"
