--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
@@ -19,6 +19,13 @@
 				<div style="font-size: 80%;" ng-if="!order?.isPaid">
 					{{ byPopupStatuses.NOT_PAID_NOTE }}
 				</div>
+
+				<div style="font-size: 80%;">
+					<i class="fa fa-shopping-basket"></i>
+					<span style="text-decoration: underline; margin-left: 3px;"
+						>View products</span
+					>
+				</div>
 			</div>
 		</div>
 		<div class="maps">
