feat: init preview order products

--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
@@ -22,7 +22,10 @@
 
 				<div style="font-size: 80%;">
 					<i class="fa fa-shopping-basket"></i>
-					<span style="text-decoration: underline; margin-left: 3px;"
+					<!-- TODO add translate -->
+					<span
+						(click)="showProductsModal()"
+						style="text-decoration: underline; margin-left: 3px;"
 						>View products</span
 					>
 				</div>
