--- a/packages/shop-mobile-ionic/src/app/pages/+products/products.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/products.page.html
@@ -40,7 +40,7 @@
 						{{ 'PRODUCTS_VIEW.DELIVERY' | translate }}
 					</small></ion-label
 				>
-				<ion-label class="pl-3 pr-3" (click)="toggleSearch()">
+				<ion-label class="pl-3 pr-3 d-flex" (click)="toggleSearch()">
 					<ion-icon name="search"></ion-icon>
 				</ion-label>
 				<ion-label
