--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.html
@@ -10,5 +10,15 @@
 		<div style="font-size: 80%;" *ngIf="!order?.isPaid">
 			{{ byPopupStatuses.NOT_PAID_NOTE }}
 		</div>
+
+		<div style="font-size: 80%;">
+			<i class="fa fa-shopping-basket"></i>
+			<!-- TODO add translate -->
+			<span
+				(click)="showProductsModal()"
+				style="text-decoration: underline; margin-left: 3px;"
+				>View products</span
+			>
+		</div>
 	</div>
 </div>
