feat: show products in popup order info

--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/common/order-info-modal/order-info-modal.component.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/common/order-info-modal/order-info-modal.component.html
@@ -14,5 +14,9 @@
 </ion-header>
 
 <ion-content class="order-info-modal-wrap">
-	<e-cu-order-card class="order-info-modal" [order]="order"></e-cu-order-card>
+	<e-cu-order-card
+		class="order-info-modal"
+		[showAll]="true"
+		[order]="order"
+	></e-cu-order-card>
 </ion-content>
