fix: order info

--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.scss
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.scss
@@ -5,7 +5,7 @@
 	align-content: center !important;
 	align-items: center !important;
 	text-align: center;
-
+	flex-direction: column;
 	.title-content {
 		margin: auto;
 	}
