--- a/packages/shop-mobile-ionic/src/global.scss
+++ b/packages/shop-mobile-ionic/src/global.scss
@@ -87,6 +87,14 @@ ion-backdrop {
 	}
 }
 
+.order-onfo-view-products {
+	width: 100%;
+	background: $brand;
+	padding: 8px;
+	color: white;
+	text-align: center;
+}
+
 .map-info-modal {
 	display: block;
 
