--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/+order-info/order-info.page.html
@@ -8,25 +8,25 @@
 	<div *ngIf="modalOpen" class="blur-lighter"></div>
 	<div dir="{{ 'CURRENT_DIRECTION' | translate }}" class="all">
 		<div class="title">
-			<div
-				class="box box-brand text-align-center"
-				style="padding: 30px 20px;"
-			>
-				<h4 class="main-title">{{ byPopupStatuses.TITLE }}</h4>
+			<div class="box box-brand text-align-center">
+				<div class="box-top">
+					<h4 class="main-title mt-0">{{ byPopupStatuses.TITLE }}</h4>
 
-				<div style="font-size: 80%;">{{ byPopupStatuses.DETAILS }}</div>
+					<div style="font-size: 80%;">
+						{{ byPopupStatuses.DETAILS }}
+					</div>
 
-				<div style="font-size: 80%;" ng-if="!order?.isPaid">
-					{{ byPopupStatuses.NOT_PAID_NOTE }}
+					<div style="font-size: 80%;" ng-if="!order?.isPaid">
+						{{ byPopupStatuses.NOT_PAID_NOTE }}
+					</div>
 				</div>
 
-				<div style="font-size: 80%;">
+				<div class="order-onfo-view-products">
 					<i class="fa fa-shopping-basket"></i>
-					<!-- TODO add translate -->
 					<span
 						(click)="showProductsModal()"
-						style="text-decoration: underline; margin-left: 3px;"
-						>View products</span
+						style="text-decoration: underline; margin-left: 5px;"
+						>{{'BUY_POPUP.VIEW_ORDER_PRODUCTS' | translate}}</span
 					>
 				</div>
 			</div>
