--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.html
@@ -1,24 +1,22 @@
-<div
-	class="box box-brand takeaway-title"
-	style="padding: 30px 20px; height: 100%;"
->
-	<div class="title-content">
-		<h4 class="main-title mt-0">{{ byPopupStatuses.TITLE }}</h4>
+<div class="box box-brand takeaway-title" style="height: 100%;">
+	<div style="padding: 30px 20px; padding-bottom: 10px;">
+		<div class="title-content">
+			<h4 class="main-title mt-0">{{ byPopupStatuses.TITLE }}</h4>
 
-		<div style="font-size: 80%;">{{ byPopupStatuses.DETAILS }}</div>
+			<div style="font-size: 80%;">{{ byPopupStatuses.DETAILS }}</div>
 
-		<div style="font-size: 80%;" *ngIf="!order?.isPaid">
-			{{ byPopupStatuses.NOT_PAID_NOTE }}
+			<div style="font-size: 80%;" *ngIf="!order?.isPaid">
+				{{ byPopupStatuses.NOT_PAID_NOTE }}
+			</div>
 		</div>
+	</div>
 
-		<div style="font-size: 80%;">
-			<i class="fa fa-shopping-basket"></i>
-			<!-- TODO add translate -->
-			<span
-				(click)="showProductsModal()"
-				style="text-decoration: underline; margin-left: 3px;"
-				>View products</span
-			>
-		</div>
+	<div class="order-onfo-view-products">
+		<i class="fa fa-shopping-basket"></i>
+		<span
+			(click)="showProductsModal()"
+			style="text-decoration: underline; margin-left: 5px;"
+			>{{ 'BUY_POPUP.VIEW_ORDER_PRODUCTS' | translate }}</span
+		>
 	</div>
 </div>
