--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/order.page.scss
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/order.page.scss
@@ -11,9 +11,19 @@
 }
 
 .box {
+	position: relative;
+
 	&-top {
-		padding: 20px 20px;
+		padding: 30px 20px;
 		padding-bottom: 10px;
+	}
+
+	&-close {
+		top: 10px;
+		right: 10px;
+		position: absolute;
+		display: flex;
+		font-size: 20px;
 	}
 }
 
