--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.html
@@ -1,4 +1,7 @@
 <div class="box box-brand takeaway-title" style="height: 100%;">
+	<span (click)="closeModal.emit()" *ngIf="lessInfo" class="box-close">
+		<i class="fa fa-times"></i>
+	</span>
 	<div style="padding: 30px 20px; padding-bottom: 10px;">
 		<div class="title-content">
 			<h4 class="main-title mt-0">{{ byPopupStatuses.TITLE }}</h4>
