--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.scss
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/takeaway/common/title/title.component.scss
@@ -6,7 +6,16 @@
 	align-items: center !important;
 	text-align: center;
 	flex-direction: column;
+	position: relative;
 	.title-content {
 		margin: auto;
+	}
+
+	.box-close {
+		top: 10px;
+		right: 10px;
+		position: absolute;
+		display: flex;
+		font-size: 20px;
 	}
 }
