feat: init shopping cart flow

--- a/packages/shop-mobile-ionic/src/app/pages/+products/products.page.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/products.page.html
@@ -61,10 +61,7 @@
 					<e-cu-store-sign [inStore]="inStore"></e-cu-store-sign>
 				</ion-label>
 
-				<ion-label
-					*ngIf="hasPendingOrder && hasPendingOrder"
-					(click)="showOrderInfo()"
-				>
+				<ion-label *ngIf="hasPendingOrder" (click)="showOrderInfo()">
 					<e-cu-order-sign
 						[onChangeOrder]="changePendingOrder"
 					></e-cu-order-sign>
