--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/common/order-info-modal/order-info-modal.component.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/common/order-info-modal/order-info-modal.component.html
@@ -19,4 +19,20 @@
 		[showAll]="true"
 		[order]="order"
 	></e-cu-order-card>
+
+	<div class="actions">
+		<ion-button (click)="closeModal(true)" color="secondary" class="col-50">
+			<span>
+				<!-- TODO add translate -->
+				<span>{{ 'Confirm' | translate }}</span>
+			</span>
+		</ion-button>
+
+		<ion-button (click)="closeModal()" color="success" class="col-50">
+			<span>
+				<!-- TODO add translate -->
+				<span>{{ 'Add More' | translate }}</span>
+			</span>
+		</ion-button>
+	</div>
 </ion-content>
