--- a/packages/shop-mobile-ionic/src/app/pages/+products/+order/common/order-info-modal/order-info-modal.component.scss
+++ b/packages/shop-mobile-ionic/src/app/pages/+products/+order/common/order-info-modal/order-info-modal.component.scss
@@ -9,3 +9,14 @@
 		height: 100%;
 	}
 }
+
+.order-info-modal-wrap {
+	.actions {
+		display: flex;
+		padding: 20px 10px;
+
+		ion-button {
+			flex: 1;
+		}
+	}
+}
